@@ -45,6 +45,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <legal><![CDATA[[INFO] Any downloads listed may be third party software. Microsoft grants you no rights for third party software.]]></legal>
+    <jacoco.min.linecoverage>0.30</jacoco.min.linecoverage>
+    <jacoco.min.branchcoverage>0.10</jacoco.min.branchcoverage>
   </properties>
 
   <developers>
@@ -122,9 +124,7 @@
             <version>3.0.0-M3</version> <!-- {x-version-update;org.apache.maven.plugins:maven-surefire-plugin;external_dependency} -->
             <configuration>
               <argLine>
-                --add-opens com.azure.core.experimental/com.azure.core.experimental.geojson=ALL-UNNAMED
                 --add-opens com.azure.core.experimental/com.azure.core.experimental.http=ALL-UNNAMED
-                --add-opens com.azure.core.experimental/com.azure.core.experimental.jsonpatch=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
